--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <hr>
           <h2>Get In Touch</h2>
           <h4>If you love problem solving, just get in touch with me.</h4>
-          <p class="contact-message">Love the above tech stacks? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
+          <p class="contact-message">Love the above tech stacks? Let's talk about how awesome they are! We can code while we eat spaghetti!</p>
           <a class="btn" href="contact-me.html"><h3>CONTACT ME</h3></a><br>
 
     
